[package]
name = "route-guide-client"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.1"
prost = "0.6"
futures-util = { version = "0.3", default-features = false, features = [] }
tokio = { version = "0.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.1"
